# synthetic-danger

./: .gitignore  FAQ.md  LICENSE  NOTICE  README.md  analyze.py  enrich.py  normalize.py  pyproject.toml  reason_high.py  repair_truncation.py  report.py  run.py  validate_input.py
data/: system.txt
docs/: _quarto.yml  architecture.md  backlog.md  index.md  inputs.md  specs.md  timeline.md  troubleshooting.md  usage.md
examples/autonomous_excavator/: input.yaml  run_example.sh
examples/warehouse_amr_tugger/: input.yaml  run_example.sh
ontology/: hazard_ontology.json
schema/: hazard.schema.json
schemas/: hazard.schema.json  reason_schema.json
templates/: system_input.yaml
