[project]
name = "synthetic-danger"
version = "0.1.0"
description = "Draft hazard generation for robotic safety reviews."
authors = [{ name = "Nexclair", email = "contact@nexclair.com" }]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "python-dotenv",
    "jsonschema",
    "pandas",
    "openpyxl",
    "pyyaml"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.tasks]
docs = "quarto render docs/ --output-dir ../_site"
validate = "python3 validate_input.py --yaml templates/system_input.yaml"
run = "python3 run.py --mode yaml --yaml templates/system_input.yaml --validate"

[tool.pixi.dependencies]
python = ">=3.11"
pip = "*"
quarto = "*"

